--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.apache.camel.springboot:camel-kafka-starter'
+
 
     implementation 'org.apache.camel:camel-rest'
     implementation 'org.apache.camel:camel-jetty'
