--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.4.5'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.springframework.boot' version '2.7.7'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'org.study'
@@ -30,23 +30,26 @@ dependencyManagement {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter' // logging 포함
     implementation 'org.apache.camel.springboot:camel-spring-boot-starter'
-    implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.apache.camel.springboot:camel-yaml-dsl-starter'
+    implementation 'org.apache.camel.springboot:camel-kafka-starter'
+    implementation 'org.apache.camel:camel-rest'
+    implementation 'org.apache.camel:camel-jetty'
+    implementation 'org.apache.camel:camel-jackson'
+    implementation 'org.apache.camel:camel-yaml-dsl'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation 'org.apache.camel.springboot:camel-kafka-starter'
 
-
-    implementation 'org.apache.camel:camel-rest'
-    implementation 'org.apache.camel:camel-jetty'
-    implementation 'org.apache.camel:camel-jackson'
-    implementation 'org.apache.camel.springboot:camel-yaml-dsl-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
