--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,30 @@
 spring:
   application:
     name: mini
+  datasource:
+    url: jdbc:postgresql://localhost:35432/postgres?schema=mini
+    username: appuser
+    password: app1234
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        default_schema: mini
+        format_sql: true
 
+logging:
+  level:
+    root: INFO
+    org.apache.camel: INFO
+    org.hibernate.SQL: DEBUG
+#    org.hibernate.type.descriptor.sql: TRACE
+---
+spring:
+  config:
+    activate:
+      on-profile: was
 server:
   port: 9071
 
@@ -11,4 +34,6 @@ camel:
     component: jetty
     binding-mode: json
   springboot:
-    routes-include-pattern: file:yaml/mini/**/*.yaml
+    routes-include-pattern: file:yaml/service/**/*.yaml
+#    main-run-controller: true
+---
