--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'org.apache.camel:camel-jackson'
     implementation 'org.apache.camel:camel-yaml-dsl'
     implementation 'org.apache.camel:camel-kafka'
+    implementation 'org.springframework.kafka:spring-kafka'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
