--- a/build.gradle
+++ b/build.gradle
@@ -34,13 +34,17 @@ dependencies {
     implementation 'org.apache.camel.springboot:camel-spring-boot-starter'
     implementation 'org.apache.camel.springboot:camel-yaml-dsl-starter'
     implementation 'org.apache.camel.springboot:camel-kafka-starter'
+    implementation 'org.apache.camel.springboot:camel-http-starter'
     implementation 'org.apache.camel:camel-rest'
+    implementation 'org.apache.camel:camel-endpointdsl'
     implementation 'org.apache.camel:camel-jetty'
     implementation 'org.apache.camel:camel-jackson'
     implementation 'org.apache.camel:camel-yaml-dsl'
     implementation 'org.apache.camel:camel-kafka'
+    implementation 'org.apache.camel:camel-http'
     implementation 'org.springframework.kafka:spring-kafka'
 
+    implementation 'org.apache.camel.springboot:camel-vertx-kafka-starter'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
